syntax = "proto3";
option go_package = "learning-grpc/pb";
    
service HelloWorld {
    rpc PrintHelloWorld (HelloRequest) returns (HelloResponse) {}
}
      
message HelloRequest {
    string message = 1;
}

message HelloResponse {
    string message = 1;
}
